--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
     }
 
     #input-teacher-name,
+    #exam-list,
     #temp,
     #holiday-list-time,
     #holiday-output-message {
@@ -829,19 +830,19 @@
 </script>
 <script>
   function hsxiExam() {
-    var examRoutine = [
-      "(HS Exam 10:00 am to 1:15 pm - XI Annual 2:00pm to 5:15 pm).Tuesday.14.03.2023 First Language",
-      "(HS Exam 10:00 am to 1:15 pm - XI Annual 2:00pm to 5:15 pm).Thursday.16.03.2023 Second Language",
-      "(HS Exam 10:00 am to 1:15 pm - XI Annual 2:00pm to 5:15 pm).Friday.17.03.2023 Vocational Subjects",
-      "(HS Exam 10:00 am to 1:15 pm - XI Annual 2:00pm to 5:15 pm).Saturday.18.03.2023 Biology, Business Studies,Political Science", 
-      "(HS Exam 10:00 am to 1:15 pm - XI Annual 2:00pm to 5:15 pm).Monday.18.03.2022 Economics",
-      "(HS Exam 10:00 am to 1:15 pm - XI Annual 2:00pm to 5:15 pm).Monday.20.03.2022 Mathematics,History,Psychology",
-      "(HS Exam 10:00 am to 1:15 pm - XI Annual 2:00pm to 5:15 pm).Tuesday.21.03.2023 Computer Science and Application, Music", 
-      "(HS Exam 10:00 am to 1:15 pm - XI Annual 2:00pm to 5:15 pm).Wednesday.22.03.2023 CLPA, Philosophy, Sociology",
-      "(HS Exam 10:00 am to 1:15 pm - XI Annual 2:00pm to 5:15 pm).Thursday.23.03.2023 Physics, Education, Nutrition,Accountancy", 
-      "(HS Exam 10:00 am to 1:15 pm - XI Annual 2:00pm to 5:15 pm).Friday.24.03.2023 Economics",
-      "(HS Exam 10:00 am to 1:15 pm - XI Annual 2:00pm to 5:15 pm).Saturday.25.03.2023 Chemistry",
-      "(HS Exam 10:00 am to 1:15 pm - XI Annual 2:00pm to 5:15 pm).Monday.27.03.2023 Cost and Taxation, Geography",
+    var examRoutine = ["(HS Exam 10:00 am to 1:15 pm - XI Annual 2:00pm to 5:15 pm)",
+      "Tuesday.14.03.2023 First Language",
+      "Thursday.16.03.2023 Second Language",
+      "Friday.17.03.2023 Vocational Subjects",
+      "Saturday.18.03.2023 Biology, Business Studies,Political Science", 
+      "Monday.18.03.2022 Economics",
+      "Monday.20.03.2022 Mathematics,History,Psychology",
+      "Tuesday.21.03.2023 Computer Science and Application, Music", 
+      "Wednesday.22.03.2023 CLPA, Philosophy, Sociology",
+      "Thursday.23.03.2023 Physics, Education, Nutrition,Accountancy", 
+      "Friday.24.03.2023 Economics",
+      "Saturday.25.03.2023 Chemistry",
+      "Monday.27.03.2023 Cost and Taxation, Geography",
     ];
     var count = 0;
     var myTableDiv = document.getElementById("exam-list");
