--- a/index.html
+++ b/index.html
@@ -341,6 +341,7 @@
     <p id="holiday-list-time" style="display: none;"></p>
     <p id="holiday-list" style="display: none;"></p>
     <p id="exam-list" style="display: none;"></p>
+    <p id="p-end"></p>
     <p id="holiday-output-message"></p>
     <p id="holiday-image"><img id="img-hol" style="display:none;" height="auto" max-width="100%"
         src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiwcpMU5VyYwI3IhgkkyZFcXdixZSOlVJ0L_Rbbri6-G8XcMDFEeGI02Q3utwFlOiqwDqGtnHoRY2r-t0OuX73vP4dR7cfa3BclQd5qeIcuS90XMllGIv0T7MaLTgS5bGBCr4dSVQwEzhyDLkNPNhVX_45d75kM6z65gfhknnQYy2lacmL0B-Ma2eXdjg/s2048/holida_general.jpeg">
@@ -671,6 +672,7 @@
           document.getElementById("box-1").style.border = "1px solid";
           document.getElementById("box-1").style.padding = "10px";
           document.getElementById("box-1").style.boxShadow = "5px 5px";
+          document.getElementById("p-end").innerHTML = "1st period will end in approximately: "+Math.floor(((g2.getTime()-d.getTime())/(1000*60))) + "minutes.";
           if ("OFF" == weekly_Routine[day_number][0].split(".")[0])
             document.getElementById("message").innerHTML = "OFF period!! You don't have any allotted class, look for provisional routine."
           //else
@@ -681,6 +683,7 @@
           document.getElementById("box-2").style.border = "1px solid";
           document.getElementById("box-2").style.padding = "10px";
           document.getElementById("box-2").style.boxShadow = "5px 5px";
+          document.getElementById("p-end").innerHTML = "2nd period will end in approximately: "+Math.floor(((g3.getTime()-d.getTime())/(1000*60))) + "minutes.";
           if ("OFF" == weekly_Routine[day_number][1].split(".")[0])
             document.getElementById("message").innerHTML = "OFF period!! You don't have any allotted class, look for provisional routine."
         }
@@ -689,6 +692,7 @@
           document.getElementById("box-3").style.border = "1px solid";
           document.getElementById("box-3").style.padding = "10px";
           document.getElementById("box-3").style.boxShadow = "5px 5px";
+          document.getElementById("p-end").innerHTML = "3rd period will end in approximately: "+Math.floor(((g4.getTime()-d.getTime())/(1000*60))) + "minutes.";
           if ("OFF" == weekly_Routine[day_number][2].split(".")[0])
             document.getElementById("message").innerHTML = "OFF period!! You don't have any allotted class, look for provisional routine."
         }
@@ -697,6 +701,7 @@
           document.getElementById("box-4").style.border = "1px solid";
           document.getElementById("box-4").style.padding = "10px";
           document.getElementById("box-4").style.boxShadow = "5px 5px";
+          document.getElementById("p-end").innerHTML = "4th period will end in approximately: "+Math.floor(((g5.getTime()-d.getTime())/(1000*60))) + "minutes.";
           if ("OFF" == weekly_Routine[day_number][3].split(".")[0])
             document.getElementById("message").innerHTML = "OFF period!! You don't have any allotted class, look for provisional routine."
         }
@@ -706,6 +711,7 @@
           document.getElementById("box-5").style.padding = "10px";
           document.getElementById("box-5").style.boxShadow = "5px 5px";
           document.getElementById("box-5").style.backgroundImage = "url('https://blogger.googleusercontent.com/img/a/AVvXsEhwFNa1tXHQsXEhmp2eMVi1sU10uFgl1xx1LeRxpjPUORpT8cuSqT7fXJF_rOpSTS_yif-lX0CcaCbdQ0HjpCvHT6VPV_Et5rS7VL_URG1gog_Dvas4VQJVDRNJuxOR-UAgrFXv2zfBfoISTVPkNU_C9zp80VeMeearcZSx9q7Ilm78_WDWFY800i44ag=s226')";
+          document.getElementById("p-end").innerHTML = "Break will end in approximately: "+Math.floor(((g6.getTime()-d.getTime())/(1000*60))) + "minutes.";
           if ("BREAK" == weekly_Routine[day_number][4].split(".")[0])
             document.getElementById("message").innerHTML = "Lunch time! Enjoy your food!"
         }
@@ -714,6 +720,7 @@
           document.getElementById("box-6").style.border = "1px solid";
           document.getElementById("box-6").style.padding = "10px";
           document.getElementById("box-6").style.boxShadow = "5px 5px";
+          document.getElementById("p-end").innerHTML = "5th period will end in approximately: "+Math.floor(((g7.getTime()-d.getTime())/(1000*60))) + "minutes.";
           if ("OFF" == weekly_Routine[day_number][5].split(".")[0])
             document.getElementById("message").innerHTML = "OFF period!! You don't have any allotted class, look for provisional routine."
         }
@@ -722,6 +729,7 @@
           document.getElementById("box-7").style.border = "1px solid";
           document.getElementById("box-7").style.padding = "10px";
           document.getElementById("box-7").style.boxShadow = "5px 5px";
+          document.getElementById("p-end").innerHTML = "6th period will end in approximately: "+Math.floor(((g8.getTime()-d.getTime())/(1000*60))) + "minutes.";
           if ("OFF" == weekly_Routine[day_number][6].split(".")[0])
             document.getElementById("message").innerHTML = "OFF period!! You don't have any allotted class, look for provisional routine."
         }
@@ -730,6 +738,16 @@
           document.getElementById("box-8").style.border = "1px solid";
           document.getElementById("box-8").style.padding = "10px";
           document.getElementById("box-8").style.boxShadow = "5px 5px";
+          document.getElementById("p-end").innerHTML = "7th period will end in approximately: "+Math.floor(((g9.getTime()-d.getTime())/(1000*60))) + "minutes.";
+          if ("OFF" == weekly_Routine[day_number][7].split(".")[0])
+            document.getElementById("message").innerHTML = "OFF period!! You don't have any allotted class, look for provisional routine."
+        }
+        else if (d.getTime() >= g9.getTime() && d.getTime() < g10.getTime() && day_number % 7 != 0) {
+          document.getElementById("box-8").style.backgroundColor = "red";
+          document.getElementById("box-8").style.border = "1px solid";
+          document.getElementById("box-8").style.padding = "10px";
+          document.getElementById("box-8").style.boxShadow = "5px 5px";
+          document.getElementById("p-end").innerHTML = "8th period will end in approximately: "+Math.floor(((g10.getTime()-d.getTime())/(1000*60))) + "minutes.";
           if ("OFF" == weekly_Routine[day_number][7].split(".")[0])
             document.getElementById("message").innerHTML = "OFF period!! You don't have any allotted class, look for provisional routine."
         }
