--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     .ITAX:hover,
     .ITAX:focus,
     .calc:hover,
-    .calc:focus,{
+    .calc:focus{
       background-color: #07c;
     }
 
@@ -570,7 +570,7 @@
         "(Bengali New Year).Thursday.15.04.2022", "(HS Exam Duty).Saturday.02.04.2022",
         "(May Day).Saturday.01.05.2022", "(Muharam).Tuesday.09.08.2022", "(Independence Day).Monday.15.08.2022", "(Janmasthami).Friday.19.08.2022"];
       //alert(noClassHSXI);
-      var g = new Date(today.getFullYear(), today.getMonth(), date, 11, 15, 00);
+      var g = new Date(today.getFullYear(), today.getMonth(), date, 11, 15, 0);
       for (var j1 = 0; j1 < holidayList.length; j1++) {
         if (g.getMonth() == holidayList[j1].split(".")[3] - 1 && date == holidayList[j1].split(".")[2]) {
           holiday = Boolean(1);
