--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ table {
             font-family: monospace;
             font-weight: bold;
             font-size: larger;
-            margin: 0;
+            margin-top: 10px;
             white-space: nowrap;
             text-align: center;
         }
@@ -305,16 +305,16 @@ table {
             color: rgb(241, 236, 238);
             text-wrap: wrap;
             font-family: monospace;
-            font-size:large;
+            font-size:12px;
             margin-left: 10px;
-            margin-top: 15px;
+            margin-top: 85px;
             margin-right: 10px;
             text-align: left;
         }
 
         .floating-bar.expanded {
             width: 300px;
-            height: 550px;
+            height: 650px;
         }
 
         .floating-bar.expanded .bar-content {
@@ -376,11 +376,19 @@ table {
     <div id="bar-content" class="bar-content">
         <p id="message-floatingbar" class="message-floatingbar">NOTICE</p>
         <div id ="notice-content" class="notice-content">
-            <ul>
-                <li>TEST -1</li>
-                <li>TEST -2</li>
-                <li>TEST -3</li>
+            
+                <ul>
+                  <li> Madhyamik Time Table 2025 </li>
+                  <li> February 10 -Monday, 2025 First Language </li>
+                  <li> February 11 -Tuesday, 2025 Second Language </li>
+                  <li> February 15 Mathematics, 2025 Mathematics </li>
+                  <li> February 17 Monday, 2025 History </li>
+                  <li> February 18 Tuesday, 2025 Geography </li>
+                  <li> February 19 Wednesday, 2025 Life Science </li>
+                  <li> February 20 Thursday, 2025 Physical Science </li>
+                  <li> February 22 Saturday, 2025 Optional Elective </li>
               </ul>
+            
         </div>
     </div>
 </div>
