--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ table {
                   <li> February 20 Thursday, 2025 Physical Science </li>
                   <li> February 22 Saturday, 2025 Optional Elective </li>
               </ul>
-            
+            <p>Holidays Maha Shivratri 26th Feb. Wednesday</p>
         </div>
     </div>
 </div>
